--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 python-dotenv==1.0.0
 SpeechRecognition==3.10.0
 pyttsx3==2.90
-openai==1.3.0
+openai==1.55.3
 langchain==0.0.267
 pywin32==306
 PyQt5==5.15.9
+httpx==0.27.2
+pyaudio
